[package]
name = "knex-keygen"
version = "3.2.0"
edition = "2021"
authors = ["David Otero"]
license = "MIT"
description = "KnexCoin Secure Key Generator — Ed25519 + ML-DSA-65 (FIPS 204)"

[[bin]]
name = "knex-keygen"
path = "src/main.rs"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
fips204 = "0.4"
sha2 = "0.10"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
zeroize = { version = "1", features = ["derive"] }

# Encryption (password-protected export)
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"

# Serialization
serde_json = "1"
hex = "0.4"

# Utils
chrono = "0.4"
rpassword = "5"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
